fix: fixed style conflict between files when wrapping components up in divs

--- a/FashionFrame-Blog/src/styles/GifDisplay.css
+++ b/FashionFrame-Blog/src/styles/GifDisplay.css
@@ -7,6 +7,7 @@
   border: 1px solid #6e7975;
   margin-left: 10px;
   margin-top: 20px;
+  max-width: 400px;
 }
 
 .gif-conveyor {
